[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gamdam"
dynamic = ["version"]
description = "Git-Annex Mass Downloader and Metadata-er"
readme = "README.rst"
requires-python = ">=3.8"
license = "MIT"
license-files = { paths = ["LICENSE"] }
authors = [
    { name = "John Thorvald Wodder II", email = "gamdam@varonathe.org" }
]

keywords = [
    "anyio",
    "async",
    "download",
    "git-annex",
]

classifiers = [
    "Development Status :: 7 - Inactive",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Framework :: AnyIO",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Communications :: File Sharing",
    "Topic :: Internet",
    "Topic :: Internet :: File Transfer Protocol (FTP)",
    "Topic :: Internet :: WWW/HTTP",
    "Typing :: Typed",
]

dependencies = [
    "anyio ~= 4.0",
    "async_generator ~= 1.10; python_version < '3.10'",
    "click >= 8.0",
    "click-loglevel ~= 0.5",
    "linesep ~= 0.4",
    "pydantic ~= 2.0",
]

[project.scripts]
gamdam = "gamdam.__main__:main"

[project.urls]
"Source Code" = "https://github.com/jwodder/gamdam"
"Bug Tracker" = "https://github.com/jwodder/gamdam/issues"

[tool.hatch.version]
path = "src/gamdam/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/docs",
    "/src",
    "/test",
    "CHANGELOG.*",
    "CONTRIBUTORS.*",
    "tox.ini",
]

[tool.hatch.envs.default]
python = "3"

[tool.mypy]
allow_incomplete_defs = false
allow_untyped_defs = false
ignore_missing_imports = false
# <https://github.com/python/mypy/issues/7773>:
no_implicit_optional = true
implicit_reexport = false
local_partial_types = true
pretty = true
show_error_codes = true
show_traceback = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
warn_untypes_fields = true
