[metadata]
name = gamdam
version = attr:gamdam.__version__
description = Git-Annex Mass Downloader and Metadata-er
long_description = file:README.rst
long_description_content_type = text/x-rst
author = John Thorvald Wodder II
author_email = gamdam@varonathe.org
license = MIT
license_files = LICENSE
url = https://github.com/jwodder/gamdam

keywords =
    ###

classifiers =
    Development Status :: 3 - Alpha
    #Development Status :: 4 - Beta
    #Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: MIT License
    ###
    Typing :: Typed

project_urls =
    Source Code = https://github.com/jwodder/gamdam
    Bug Tracker = https://github.com/jwodder/gamdam/issues

[options]
packages = find:
package_dir =
    =src
include_package_data = True
python_requires = ~=3.6
install_requires =
    async_generator ~= 1.10; python_version < '3.10'
    click >= 8.0
    click-loglevel ~= 0.2
    feedparser ~= 6.0
    httpx ~= 0.20.0
    pydantic ~= 1.7
    trio ~= 0.19.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    gamdam = gamdam.__main__:main

[flake8]
doctests = True
exclude = .*/,build/,dist/,test/data,venv/
hang-closing = False
max-doc-length = 100
max-line-length = 80
unused-arguments-ignore-stub-functions = True
select = C,B,B902,B950,E,E242,F,U100,W
ignore = B005,E203,E262,E266,E501,I201,W503

[isort]
atomic = True
force_sort_within_sections = True
honor_noqa = True
lines_between_sections = 0
profile = black
reverse_relative = True
sort_relative_in_force_sorted_sections = True
src_paths = src

[mypy]
allow_incomplete_defs = False
allow_untyped_defs = False
ignore_missing_imports = True
# <https://github.com/python/mypy/issues/7773>:
no_implicit_optional = True
implicit_reexport = False
local_partial_types = True
pretty = True
show_error_codes = True
show_traceback = True
strict_equality = True
warn_redundant_casts = True
warn_return_any = True
warn_unreachable = True
plugins = pydantic.mypy,trio_typing.plugin

[pydantic-mypy]
init_forbid_extra = True
warn_untypes_fields = True
