[metadata]
name = gamdam
version = attr:gamdam.__version__
description = Git-Annex Mass Downloader and Metadata-er
long_description = file:README.rst
long_description_content_type = text/x-rst
author = John Thorvald Wodder II
author_email = gamdam@varonathe.org
license = MIT
license_files = LICENSE
url = https://github.com/jwodder/gamdam

keywords =
    async
    download
    git-annex
    trio

classifiers =
    Development Status :: 3 - Alpha
    #Development Status :: 4 - Beta
    #Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: MIT License
    Environment :: Console
    Framework :: Trio
    Intended Audience :: End Users/Desktop
    Topic :: Communications :: File Sharing
    Topic :: Internet
    Topic :: Internet :: File Transfer Protocol (FTP)
    Topic :: Internet :: WWW/HTTP
    Typing :: Typed

project_urls =
    Source Code = https://github.com/jwodder/gamdam
    Bug Tracker = https://github.com/jwodder/gamdam/issues

[options]
packages = find:
package_dir =
    =src
include_package_data = True
python_requires = ~=3.8
install_requires =
    async_generator ~= 1.10; python_version < '3.10'
    click >= 8.0
    click-loglevel ~= 0.2
    pydantic ~= 1.7
    trio ~= 0.19.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    gamdam = gamdam.__main__:main

[mypy]
allow_incomplete_defs = False
allow_untyped_defs = False
ignore_missing_imports = True
# <https://github.com/python/mypy/issues/7773>:
no_implicit_optional = True
implicit_reexport = False
local_partial_types = True
pretty = True
show_error_codes = True
show_traceback = True
strict_equality = True
warn_redundant_casts = True
warn_return_any = True
warn_unreachable = True
plugins = pydantic.mypy,trio_typing.plugin

[pydantic-mypy]
init_forbid_extra = True
warn_untypes_fields = True
